--- a/classes/cleric/index.html
+++ b/classes/cleric/index.html
@@ -180,7 +180,7 @@
 	<li>被授予你所選擇的新法術，其等級總和不能超過你自身的等級+1，且每個法術的等級都不能高於你自身的等級。</li>
 	<li>準備好你所有的禱念。禱念永遠不會被計入你的準備法術上限。</li></ul></div></div>
 
-<div class="Move"><div id="CastASpell"><h3 class="BasicMoveName">施放法術 (Cast a Spell)</h3>
+<div class="Move"><div id="CastASpell"><h3 class="BasicMoveName">施放法術(睿知) (Cast a Spell)</h3>
 <p class="NoIndent">
 	當你<strong>施放一個你神祇所授予的法術</strong>時，擲+睿知：<br/>
 	✴擲出10+時，該法術被成功施放，且你的神祇並未收回該法術，因此你之後仍可以再次施展該法術。<br/>
@@ -224,9 +224,9 @@
 
 <h2>羈絆</h2>
 <div id="bonds"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
-<p>_______________ 曾經侮辱我的神；我不信任他們。</p>
-<p>_______________ 是個善良而虔誠的人，我對他們抱持絕對的信任。</p>
-<p>_______________ 時常處在危險之中，我會保護他們的安全。</p>
+<p>_______________ 曾經侮辱我的神；我不信任他。</p>
+<p>_______________ 是個善良而虔誠的人，我對他抱持絕對的信任。</p>
+<p>_______________ 時常處在危險之中，我會保護他的安全。</p>
 <p>我正在努力讓 _______________ 皈依我的信仰。</p></div>
 <hr/>
 
