--- a/classes/druid/index.html
+++ b/classes/druid/index.html
@@ -122,9 +122,9 @@
 <hr/>
 <h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
-<p class="NoIndent">睿智的眼神, 狂野的眼神, 或 著魔的眼神</p>
-<p class="NoIndent">毛皮兜帽, 凌亂的髮型, 或 辮子髮型</p>
-<p class="NoIndent">儀式祭服, 實用革衣, 或 飽經風霜的獸皮</p></div>
+<ul><li>睿智的眼神, 狂野的眼神, 或 著魔的眼神</li>
+<li>毛皮兜帽, 凌亂的髮型, 或 辮子髮型</li>
+<li>儀式祭服, 實用革衣, 或 飽經風霜的獸皮</li></ul></div>
 <hr/>
 <h2>屬性數值</h2>
 <p class="NoIndent">你的最大生命值為 6+體質值。</p>
