--- a/classes/fighter/index.html
+++ b/classes/fighter/index.html
@@ -127,10 +127,10 @@
 
 <h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
-<p class="NoIndent">堅毅的眼神, 死沉的眼神, 或 熱切的眼神</p>
-<p class="NoIndent">狂野的髮型, 剃短的髮型, 或 破舊頭盔</p>
-<p class="NoIndent">粗硬的肌膚，曬黑的肌膚，或 滿佈疤痕的肌膚</p>
-<p class="NoIndent">健壯的體型，輕盈的體型，或 經過摧殘的身軀</p></div>
+<ul><li>堅毅的眼神, 死沉的眼神, 或 熱切的眼神</li>
+<li>狂野的髮型, 剃短的髮型, 或 破舊頭盔</li>
+<li>粗硬的肌膚，曬黑的肌膚，或 滿佈疤痕的肌膚</li>
+<li>健壯的體型，輕盈的體型，或 經過摧殘的身軀</li></ul></div>
 <hr/>
 
 <h2>屬性數值</h2>
@@ -238,7 +238,7 @@
 <p>不論 _______________ 是否承認，他都欠我一條命。</p>
 <p>我發過誓要保護 _______________。</p>
 <p>我擔憂 _______________ 在地城中生存下來的能力。</p>
-<p>_______________ 相當柔弱，但我會讓他們像我一樣堅強。</p></div>
+<p>_______________ 相當柔弱，但我會讓他像我一樣堅強。</p></div>
 <hr/>
 <h2>進階動作</h2>
 <div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
@@ -324,7 +324,7 @@
 	當你<strong>投身戰鬥</strong>時，擲+睿知。<br/>
 	✴擲出10+時，指名一個將會活下來的人，<strong>並</strong>指名一個將會死去的人。<br/>
 	✴擲出7-9時，指名一個將會活下來的人，<strong>或</strong>指名一個將會死去的人。<br/>
-	指名NPC，而非玩家角色。哪怕只有些微的可能性，GM也會使你的預見的未來景象成真。</p>
+	指名NPC，而非玩家角色。哪怕只有些微的可能性，GM也會使你預見的未來景象成真。</p>
 <p class="NoIndent">
 	✴擲出6-時，你看見了你自己的死亡，並因此在這場戰鬥期間獲得持續-1。</p></div>
 
