--- a/classes/ranger/index.html
+++ b/classes/ranger/index.html
@@ -116,132 +116,190 @@
 <p>嚮導、獵手、荒野的造物。你遠遠不只如此。你在荒野中一向孤獨，但那偉大之物的呼喚－－或許可以稱之為命運－－將你與這些都市人的命連繫在了一起。他們或許勇敢。或許強大健壯。但只有你通曉這兩者間的秘密。</p>
 <p>沒有你，他們就會迷失。在鮮血與黑暗之中燒出通往前方的道路吧，神行客。</p></div>
 <hr/>
-<h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>Elf</em>: Throndir, Elrosine, 艾蘭威(Aranwe), Celion, Dambrath, Lanethe</p> 
-<p class="NoIndent"><em>Human</em>: Jonah, 哈利克(Halek), Brandon, 埃默里(Emory), Shrike, 諾拉(Nora), Diana</p></div>
+<h2>名稱</h2>
+<div id="names"><p class="NoIndent"><b>精靈</b>: 特隆迪爾(Throndir), 艾羅辛(Elrosine), 艾蘭威(Aranwe), 席琳翁(Celion), 丹布雷斯(Dambrath), 蕾妮特(Lanethe)</p> 
+<p class="NoIndent"><b>人類</b>: 約拿(Jonah), 哈利克(Halek), 布蘭登(Brandon), 埃默里(Emory), 伯勞(Shrike), 諾拉(Nora), 黛安娜(Diana)</p></div>
 <hr/>
-<h2>外觀 (Look)</h2>
+<h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
-<p class="NoIndent">Wild Eyes, Sharp Eyes, or Animal Eyes</p>
-<p class="NoIndent">Hooded Head, Wild Hair, or Bald</p>
-<p class="NoIndent">Cape, Camouflage, or Traveling Clothes</p>
-<p class="NoIndent">Lithe Body, Wild Body, or Sharp Body</p></div>
+<ul><li>狂野的眼神, 銳利的眼神, 或 野獸的眼神</li>
+<li>兜帽, 狂野的髮型, 或 光頭</li>
+<li>斗篷, 自然偽裝, 或 旅行衣裝</li>
+<li>輕盈的體型, 野性的體型, 或 輪廓鮮明的體型</li></ul></div>
 <hr/>
-<h2>屬性數值 (Stats)</h2>
-<p class="NoIndent">Your maximum HP is 8+Constitution.</p>
-<p class="NoIndent">Your base damage is <span id="Damage">d8</span>.</p>
+
+<h2>屬性數值</h2>
+<p class="NoIndent">你的最大生命值為 8+體質值。</p>
+<p class="NoIndent">你的基礎傷害骰為 <span id="Damage">d8</span>。</p>
 <hr/>
-<h2>起始動作 (Starting Moves)</h2>
-<div id="startingmoves"><p class="InstructionsAfterHeader">Choose a race and gain the corresponding move:</p>
-<div id="racialmoves"><div class="Move"><h3 class="MoveName">Elf</h3>
-<p class="NoIndent">When you undertake a perilous journey through wilderness whatever job you take you succeed as if you rolled a 10+.</p></div>
-<div class="Move"><h3 class="MoveName">Human</h3>
-<p class="NoIndent">When you make camp in a dungeon or city, you don’t need to consume a ration.</p></div></div>
-<div id="classmoves"><p class="Instructions">You start with these moves:</p>
-<div class="Move"><h3 class="BasicMoveName">Hunt and Track (Wis)</h3>
-<p class="NoIndent">When you <strong>follow a trail of clues left behind by passing creatures</strong>, roll+WIS. ✴On a 7+, you follow the creature’s trail until there’s a significant change in its direction or mode of travel. ✴On a 10+, you also choose 1:</p>
-<ul><li>Gain a useful bit of information about your quarry, the GM will tell you what</li>
-<li>Determine what caused the trail to end</li></ul></div>
-<div class="Move"><h3 class="BasicMoveName">Called Shot</h3>
-<p class="NoIndent">When you <strong>attack a defenseless or surprised enemy at range</strong>, you can choose to deal your damage or name your target and roll+DEX.</p>
-<ul><li>Head ✴10+: As 7–9, plus your damage ✴7-9: They do nothing but stand and drool for a few moments.</li>
-<li>Arms ✴10+: As 7-9, plus your damage ✴7-9: They drop anything they’re holding.</li>
-<li>Legs ✴10+: As 7-9, plus your damage ✴7-9: They’re hobbled and slow moving.</li></ul></div>
-<div class="Move"><h3 class="BasicMoveName">Animal Companion</h3>
-<p class="NoIndent">You have a supernatural connection with a loyal animal. You can’t talk to it per se but it always acts as you wish it to. Name your animal companion and choose a species:</p>
-<p class="Example">Wolf, cougar, bear, eagle, dog, hawk, cat, owl, pigeon, rat, mule</p>
-<p class="NoIndent">Choose a base:</p>
-<ul><li>Ferocity +2, Cunning +1, 1 Armor, Instinct +1</li>
-<li>Ferocity +2, Cunning +2, 0 Armor, Instinct +1</li>
-<li>Ferocity +1, Cunning +2, 1 Armor, Instinct +1</li>
-<li>Ferocity +3, Cunning +1, 1 Armor, Instinct +2</li></ul>
-<p class="NoIndent">Choose as many strengths as its ferocity:</p>
-<p class="Example">Fast, burly, huge, calm, adaptable, quick reflexes, tireless, camouflage, ferocious, intimidating, keen senses, stealthy</p>
-<p class="NoIndent">Your animal companion is trained to fight humanoids. Choose as many additional trainings as its cunning:</p>
-<p class="Example">Hunt, search, scout, guard, fight monsters, perform, labor, travel</p>
-<p class="NoIndent">Choose as many weaknesses as its instinct:</p>
-<p class="Example">Flighty, savage, slow, broken, frightening, forgetful, stubborn, lame</p></div>
-<div class="Move"><h3 class="BasicMoveName">Command</h3>
-<p class="NoIndent">When you work with your animal companion on something it’s trained in…</p>
-<ul><li>…and you attack the same target, add its ferocity to your damage</li>
-<li>…and you track, add its cunning to your roll</li>
-<li>…and you take damage, add its armor to your armor</li>
-<li>…and you discern realities, add its cunning to your roll</li>
-<li>…and you parley, add its cunning to your roll</li>
-<li>…and someone interferes with you, add its instinct to their roll</li></ul></div></div></div>
+
+<h2>起始動作</h2>
+<div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
+<div id="racialmoves"><div class="Move"><h3 class="MoveName">精靈</h3>
+<p class="NoIndent">當你們踏上一段橫越荒野的危險旅程時，無論你擔任哪一個職位，該工作都將如同你擲出10+的結果一樣自動成功。</p></div>
+<div class="Move"><h3 class="MoveName">人類</h3>
+<p class="NoIndent">當你在地城或城市中紮營時，你不需要消耗口糧。</p></div></div>
+
+<div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
+<div class="Move"><h3 class="BasicMoveName">狩獵與追跡(睿知) (Hunt and Track)</h3>
+<p class="NoIndent">
+	當你<strong>追尋路經此地的生物所留下的蹤跡</strong>時，擲+睿知：<br/>
+	✴擲出7+時，你跟隨該生物的蹤跡前進，直到牠的方向或行進模式發生了顯著的改變。<br/>
+	✴擲出10+時，你還可以選擇下列一項：</p>
+<ul>
+	<li>你得知一些關於獵物的有用情報，GM將會告訴你內容</li>
+	<li>辨明蹤跡中斷的原因</li></ul></div>
+
+<div class="Move"><h3 class="BasicMoveName">瞄準射擊 (Called Shot)</h3>
+<p class="NoIndent">
+	當你<strong>從遠距離攻擊一個毫無防備或被突襲的敵人</strong>時，你可以選擇直接造成你的傷害、或是指定攻擊的部位並擲+敏捷：</p>
+<ul><li>頭部：<br/>
+	✴擲出10+時：如同7-9，且再加上你的傷害。<br/>
+	✴擲出7-9時：目標將站在原地暈愣數秒，無法做出任何行動。</li></ul>
+<ul><li>手部：<br/>
+	✴擲出10+時：如同7-9，且再加上你的傷害。<br/>
+	✴擲出7-9時：目標鬆手落下任何他們正持握的物品。</li></ul>
+<ul><li>腿部：<br/>
+	✴擲出10+時：如同7-9，且再加上你的傷害。<br/>
+	✴擲出7-9時：目標跛腳蹣跚，移動緩慢。</li></ul></div>
+
+<div class="Move"><h3 class="BasicMoveName">動物夥伴 (Animal Companion)</h3>
+<p class="NoIndent">
+	你和一隻忠心耿耿的動物之間有著超自然的連結。儘管你無法與牠對話，但牠總是會如你所願行動。為你的動物夥伴取一個名字，並決定牠的物種：</p>
+<ul>
+	<li>狼, 美洲獅, 熊, 鵰, 狗, 鷹, 貓, 貓頭鷹, 鴿子, 老鼠, 騾子</li></ul>
+<p class="NoIndent">選擇一組基礎數值：</p>
+<ul>
+	<li>兇猛 +2, 機巧 +1, 1 護甲值, 本能 +1</li>
+	<li>兇猛 +2, 機巧 +2, 0 護甲值, 本能 +1</li>
+	<li>兇猛 +1, 機巧 +2, 1 護甲值, 本能 +1</li>
+	<li>兇猛 +3, 機巧 +1, 1 護甲值, 本能 +2</li></ul>
+<p class="NoIndent">選擇數量等同於 兇猛值 的強項：</p>
+<ul>
+	<li>迅速, 魁梧, 巨大, 冷靜, 適應, 快速反射, 不倦, 偽裝, 兇猛, 威嚇, 敏銳感官, 潛行</li></ul>
+<p class="NoIndent">你的動物夥伴接受過與類人生物戰鬥的訓練。此外，再選擇數量等同於 機巧值 的訓練項：</p>
+<ul>
+	<li>狩獵, 搜索, 偵察, 守衛, 與怪物戰鬥, 表演, 勞動, 旅行</li></ul>
+<p class="NoIndent">選擇數量等同於 本能值 的弱點：</p>
+<ul>
+	<li>輕浮, 野蠻, 緩慢, 衰弱, 駭人, 健忘, 固執, 瘸跛</li></ul></div>
+
+<div class="Move"><h3 class="BasicMoveName">命令 (Command)</h3>
+<p class="NoIndent">
+	當你與你的動物夥伴共同進行一件牠曾受過訓練的行動……</p>
+<ul>
+	<li>……且與你一起攻擊相同的目標時，將牠的 兇猛值 加到你的傷害中</li>
+	<li>……且與你一起追蹤目標時，將牠的 機巧值 加到你的擲骰結果中</li>
+	<li>……而你受到傷害時，將牠的 護甲值 加到你的護甲值上</li>
+	<li>……且與你一起審視現狀時，將牠的 機巧值 加到你的擲骰結果中</li>
+	<li>……且輔助你與某人談判時，將牠的 機巧值 加到你的擲骰結果中</li>
+	<li>……且某人干擾你的行動時，將牠的 本能值 加到<b>干擾者</b>的擲骰結果中</li></ul></div></div></div>
 <hr/>
-<h2>陣營 (Alignment)</h2>
-<p class="InstructionsAfterHeader">Choose an alignment:</p>
-<div id="alignment"><div class="Move"><h3 class="MoveName">Chaotic</h3>
-<p class="NoIndent">Free someone from literal or figurative bonds.</p></div>
-<div class="Move"><h3 class="MoveName">Good</h3>
-<p class="NoIndent">Endanger yourself to combat an unnatural threat.</p></div>
-<div class="Move"><h3 class="MoveName">Neutral</h3>
-<p class="NoIndent">Help an animal or spirit of the wild.</p></div></div>
+
+<h2>陣營</h2>
+<p class="InstructionsAfterHeader">選擇一個陣營：</p>
+<div id="alignment"><div class="Move"><h3 class="MoveName">混亂</h3>
+<p class="NoIndent">使某人從字面意義上或象徵性的束縛中解脫。</p></div>
+<div class="Move"><h3 class="MoveName">善良</h3>
+<p class="NoIndent">為了對抗非自然的威脅而使自身置身險境。</p></div>
+<div class="Move"><h3 class="MoveName">中立</h3>
+<p class="NoIndent">幫助動物或荒野中的精魂。</p></div></div>
 <hr/>
-<h2>裝備 (Gear)</h2>
-<div id="gear"><p class="NoIndent">Your load is 11+Str. You start with dungeon rations (5 uses, 1 weight), leather armor (1 armor, 1 weight), and a bundle of arrows (3 ammo, 1 weight). Choose your armament:</p>
-<ul><li class="Option">Hunter’s bow (near, far, 1 weight) and short sword (close, 1 weight)</li>
-<li class="Option">Hunter’s bow (near, far, 1 weight) and spear (reach, 1 weight)</li></ul>
-<p class="NoIndent">Choose one:</p>
-<ul><li class="Option">Adventuring gear (1 weight) and dungeon rations (1 weight)</li>
-<li class="Option">Adventuring gear (1 weight) and bundle of arrows (3 ammo, 1 weight)</li></ul></div>
+
+<h2>裝備</h2>
+<div id="gear"><p class="NoIndent">
+	你的負載上限為 11+力量。<br/>
+	你起始擁有 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>), 皮甲 (<tag>1 護甲</tag> <tag>1 重量</tag>), 和 一綑箭矢 (<tag>3 彈藥</tag> <tag>1 重量</tag></span>)</p>
+選擇你的武器：
+<ul>
+	<li class="Option">獵弓 (<span class="Tags">短程, 遠程, 1 重量</span>), 和 短劍 (<span class="Tags">近身, 1 重量</span>)</li>
+	<li class="Option">獵弓 (<span class="Tags">短程, 遠程, 1 重量</span>), 和 長矛 (<span class="Tags">及遠, 1 重量</span>)</li></ul>
+選擇一項：
+<ul>
+	<li class="Option">探險工具組 (<span class="Tags">5 使用次數, 1 重量</span>), 和 地城口糧 (<span class="Tags">5 使用次數, 1 重量</span>)</li>
+	<li class="Option">探險工具組 (<span class="Tags">5 使用次數, 1 重量</span>), 和 一綑箭矢 (<span class="Tags">3 彈藥, 1 重量</span>)</li></ul></div>
 <hr/>
-<h2>羈絆 (Bonds)</h2>
+
+<h2>羈絆</h2>
 <div id="bond"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
-<p>I have guided _______________ before and they owe me for it.</p>
-<p>_______________ is a friend of nature, so I will be their friend as well.</p>
-<p>_______________ has no respect for nature, so I have no respect for them.</p>
-<p>_______________ does not understand life in the wild, so I will teach them.</p></div>
+<p>我過去曾經指導過 _______________ 且他為此欠我一個恩情。</p>
+<p>_______________ 是自然之友，所以我也會是他的朋友。</p>
+<p>_______________ 不敬重大自然，因此我也不會尊重他。</p>
+<p>_______________ 並不了解如何度過荒野中的生活，因此我會教導他。</p></div>
 <hr/>
-<h2>進階動作 (Advanced Moves)</h2>
-<div id="moves"><p class="InstructionsAfterHeader">You may take this move only if it is your first advancement.</p>
-<div class="Move"><h3 class="MoveName">Half-Elven</h3>
-<p class="NoIndent">Somewhere in your lineage lies mixed blood and it begins to show its presence. You gain the elf starting move if you took the human one at character creation or vice versa.</p></div>
-<p class="Instructions">When you gain a level from 2-5, choose from these moves.</p>
-<div class="Move"><h3 class="MoveName">Wild Empathy</h3>
-<p class="NoIndent">You can speak with and understand animals.</p></div>
-<div class="Move"><h3 class="MoveName">Familiar Prey</h3>
-<p class="NoIndent">When you spout lore about a monster you use WIS instead of INT.</p></div>
-<div class="Move"><h3 class="MoveName">Viper’s Strike</h3>
+
+<h2>進階動作</h2>
+<div id="moves"><p class="InstructionsAfterHeader">你只能在你第一次升級時選擇這個行動：</p>
+<div class="Move"><h3 class="MoveName">半精靈 (Half-Elven)</h3>
+<p class="NoIndent">
+	你的血脈中流淌著不同種族的混血，且它的本質開始顯露出來。若你在角色創造時選擇了人類種族，則你獲得精靈種族的起始動作；反之亦然。</p></div>
+
+<p class="Instructions">當你的等級升至2~5，從下列動作中選擇：</p>
+
+<div class="Move"><h3 class="MoveName">荒野共感 (Wild Empathy)</h3>
+<p class="NoIndent">
+	你能夠與動物交談並理解牠們的意思。</p></div>
+
+<div class="Move"><h3 class="MoveName">熟悉的獵物 (Familiar Prey)</h3>
+<p class="NoIndent">
+	當你針對怪物進行憶述見聞時，你使用睿知來取代智力。</p></div>
+
+<div class="Move"><h3 class="MoveName">毒蛇雙襲 (Viper’s Strike)</h3>
 <p class="NoIndent">When you strike an enemy with two weapons at once, add an extra 1d4 damage for your off-hand strike.</p></div>
-<div class="Move"><h3 class="MoveName">Camouflage</h3>
+
+<div class="Move"><h3 class="MoveName">保護色 (Camouflage)</h3>
 <p class="NoIndent">When you <strong>keep still in natural surroundings</strong>, enemies never spot you until you make a movement.</p></div>
-<div class="Move"><h3 class="MoveName">Man’s Best Friend</h3>
+
+<div class="Move"><h3 class="MoveName">人類最好的朋友 (Man’s Best Friend)</h3>
 <p class="NoIndent">When you <strong>allow your animal companion to take a blow that was meant for you</strong>, the damage is negated and your animal companion’s ferocity becomes 0. If its ferocity is already 0 you can’t use this ability. When you have a few hours of rest with your animal companion its ferocity returns to normal.</p></div>
-<div class="Move"><h3 class="MoveName">Blot Out the Sun</h3>
+
+<div class="Move"><h3 class="MoveName">遮天箭雨 (Blot Out the Sun)</h3>
 <p class="NoIndent">When you volley you may spend extra ammo before rolling. For each point of ammo spent you may choose an extra target. Roll once and apply damage to all targets.</p></div>
-<div class="Move"><h3 class="MoveName">Well-Trained</h3>
-<p class="NoIndent">Choose another training for your animal companion.</p></div>
-<div class="Move"><h3 class="MoveName">God Amidst the Wastes</h3>
+
+<div class="Move"><h3 class="MoveName">充分訓練 (Well-Trained)</h3>
+<p class="NoIndent">
+	為你的動物夥伴再選擇一個訓練項。</p></div>
+
+<div class="Move"><h3 class="MoveName">荒蕪原野諸神 (God Amidst the Wastes)</h3>
 <p class="NoIndent">Dedicate yourself to a deity (name a new one or choose one that’s already been established). You gain the commune and cast a spell cleric moves. When you select this move, treat yourself as a cleric of level 1 for using spells. Every time you gain a level thereafter, increase your effective cleric level by 1.</p></div>
-<div class="Move"><h3 class="MoveName">Follow Me</h3>
+
+<div class="Move"><h3 class="MoveName">隨我前來 (Follow Me)</h3>
 <p class="NoIndent">When you undertake a perilous journey you can take two roles. You make a separate roll for each.</p></div>
-<div class="Move"><h3 class="MoveName">A Safe Place</h3>
+
+<div class="Move"><h3 class="MoveName">安居之所 (A Safe Place)</h3>
 <p class="NoIndent">When you <strong>set the watch for the night</strong>, everyone takes +1 to take watch.</p></div>
-<p class="Instructions">When you gain a level from 6-10, choose from these moves or the level 2-5 moves.</p>
-<div class="Move"><h3 class="MoveName">Wild Speech</h3>
-<p class="Requirement">Replaces: Wild Empathy</p>
+
+<p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
+<div class="Move"><h3 class="MoveName">荒野之語</h3>
+<p class="Requirement">取代: 荒野共感</p>
 <p class="NoIndent">You can speak with and understand any non-magical, non-planar creature.</p></div>
-<div class="Move"><h3 class="MoveName">Hunter’s Prey</h3>
-<p class="Requirement">Replaces: Familiar Prey</p>
+
+<div class="Move"><h3 class="MoveName">獵人的獵物 (Hunter’s Prey)</h3>
+<p class="Requirement">取代: 熟悉的獵物</p>
 <p class="NoIndent">When you spout lore about a monster you use WIS instead of INT. On a 12+, in addition to the normal effects, you get to ask the GM any one question about the subject.</p></div>
-<div class="Move"><h3 class="MoveName">Viper’s Fangs</h3>
-<p class="Requirement">Replaces: Viper’s Strike</p>
+
+<div class="Move"><h3 class="MoveName">毒蛇獠牙</h3>
+<p class="Requirement">取代: 毒蛇雙襲</p>
 <p class="NoIndent">When you strike an enemy with two weapons at once, add an extra 1d8 damage for your off-hand strike.</p></div>
-<div class="Move"><h3 class="MoveName">Smaug’s Belly</h3>
+
+<div class="Move"><h3 class="MoveName">巨龍的軟腹 (Smaug’s Belly)</h3>
 <p class="NoIndent">When you know your target’s weakest point your arrows have 2 piercing.</p></div>
-<div class="Move"><h3 class="MoveName">Strider</h3>
-<p class="Requirement">Replaces: Follow Me</p>
+
+<div class="Move"><h3 class="MoveName">奔行者 (Strider)</h3>
+<p class="Requirement">取代: 隨我前來</p>
 <p class="NoIndent">When you undertake a perilous journey you can take two roles. Roll twice and use the better result for both roles.</p></div>
-<div class="Move"><h3 class="MoveName">A Safer Place</h3>
-<p class="Requirement">Replaces: A Safe Place</p>
+
+<div class="Move"><h3 class="MoveName">安然之地 (A Safer Place)</h3>
+<p class="Requirement">取代: 安居之所</p>
 <p class="NoIndent">When you set the watch for the night everyone takes +1 to take watch. After a night in camp when you set the watch everyone takes +1 forward.</p></div>
-<div class="Move"><h3 class="MoveName">Observant</h3>
+
+<div class="Move"><h3 class="MoveName">觀察敏銳 (Observant)</h3>
 <p class="NoIndent">When you hunt and track, on a hit you may also ask one question about the creature you are tracking from the discern realities list for free.</p></div>
-<div class="Move"><h3 class="MoveName">Special Trick</h3>
+
+<div class="Move"><h3 class="MoveName">特殊技倆 (Special Trick)</h3>
 <p class="NoIndent">Choose a move from another class. So long as you are working with your animal companion you have access to that move.</p></div>
-<div class="Move"><h3 class="MoveName">Unnatural Ally</h3>
+
+<div class="Move"><h3 class="MoveName">超自然盟友 (Unnatural Ally)</h3>
 <p class="NoIndent">Your animal companion is a monster, not an animal. Describe it. Give it +2 ferocity and +1 instinct, plus a new training.</p></div></div>
 
           </div>
