--- a/classes/wizard/index.html
+++ b/classes/wizard/index.html
@@ -119,15 +119,15 @@
 <p>Yeah. We didn’t think so.</p></div>
 <hr/>
 <h2>名稱</h2>
-<div id="names"><p class="NoIndent"><b>精靈</b>: Galadiir, 芬法里爾(Fenfaril), Lilliastre, Phirosalle, Enkirash, Halwyr</p> 
-<p class="NoIndent"><b>人類</b>: 亞文(Avon), Morgan, 拉瑟(Rath), Ysolde, Ovid, 維特(Vitus), Aldara, Xeno, Uri</p></div>
+<div id="names"><p class="NoIndent"><b>精靈</b>: 格拉狄爾(Galadiir), 芬法里爾(Fenfaril), 莉莉雅斯翠(Lilliastre), 菲羅薩雷(Phirosalle), 安奇拉許(Enkirash), 哈維爾(Halwyr)</p> 
+<p class="NoIndent"><b>人類</b>: 亞文(Avon), 摩根(Morgan), 拉瑟(Rath), 伊索德(Ysolde), 奧維德(Ovid), 維特(Vitus), 愛爾達拉(Aldara), 席諾(Xeno), 烏里(Uri)</p></div>
 <hr/>
 <h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
-<p class="NoIndent">Haunted Eyes, Sharp Eyes, or Crazy Eyes</p>
-<p class="NoIndent">Styled Hair, Wild Hair, or Pointed Hat</p>
-<p class="NoIndent">Worn Robes, Stylish Robes, or Strange Robes</p>
-<p class="NoIndent">Pudgy Body, Creepy Body, or Thin Body</p></div>
+<ul><li>Haunted Eyes, Sharp Eyes, or Crazy Eyes</li>
+<li>Styled Hair, Wild Hair, or Pointed Hat</li>
+<li>Worn Robes, Stylish Robes, or Strange Robes</li>
+<li>Pudgy Body, Creepy Body, or Thin Body</li></ul></div>
 <hr/>
 <h2>屬性數值</h2>
 <p class="NoIndent">你的最大生命值為 4+體質值。</p>
