--- a/classes/thief/index.html
+++ b/classes/thief/index.html
@@ -116,28 +116,30 @@
 <p>Sure, they give you lip for all the times you’ve snuck off alone but without you, who among them wouldn’t have been dissected by a flying guillotine or poisoned straight to death by some ancient needle trap? So, let them complain. When you’re done with all this delving you’ll toast their hero’s graves.</p>
 <p>From your castle. Full of gold. You rogue.</p></div>
 <hr/>
-<h2>名稱 (Names)</h2>
-<div id="names"><p class="NoIndent"><em>Halfling</em>: Felix, Rook, 小鼠(Mouse), Sketch, Trixie, Robin, 歐瑪爾(Omar), Brynn, Bug</p>
-<p class="NoIndent"><em>Human</em>: 雀兒(Sparrow), Shank, Jack, Marlow, Dodge, Rat, Pox, Humble, Farley</p></div>
+<h2>名稱</h2>
+<div id="names"><p class="NoIndent"><b>半身人</b>: 菲力克斯(Felix), 盧克(Rook), 小鼠(Mouse), 斯凱奇(Sketch), 崔西(Trixie), 羅賓(Robin), 歐瑪爾(Omar), 布琳(Brynn), 小蟲(Bug)</p>
+<p class="NoIndent"><b>人類</b>: 雀兒(Sparrow), 尚克(Shank), 傑克(Jack), 瑪洛(Marlow), 道奇(Dodge), 萊特(Rat), 帕克斯(Pox), 漢柏(Humble), 法利(Farley)</p></div>
 <hr/>
-<h2>外觀 (Look)</h2>
+<h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
-<p class="NoIndent">Shifty Eyes or Criminal Eyes</p>
-<p class="NoIndent">Hooded Head, Messy Hair, or Cropped Hair</p>
-<p class="NoIndent">Dark Clothes, Fancy Clothes, or Common Clothes</p>
-<p class="NoIndent">Lithe Body, Knobby Body, or Flabby Body</p></div>
+<ul><li>Shifty Eyes or Criminal Eyes</li>
+<li>Hooded Head, Messy Hair, or Cropped Hair</li>
+<li>Dark Clothes, Fancy Clothes, or Common Clothes</li>
+<li>Lithe Body, Knobby Body, or Flabby Body</li></ul></div>
 <hr/>
-<h2>屬性數值 (Stats)</h2>
-<p class="NoIndent">Your maximum HP is 6+Constitution.</p>
-<p class="NoIndent">Your base damage is <span id="Damage">d8</span>.</p>
+<h2>屬性數值</h2>
+<p class="NoIndent">你的最大生命值為 6+體質值。</p>
+<p class="NoIndent">你的基礎傷害骰為 <span id="Damage">d8</span>。</p>
 <hr/>
-<h2>起始動作 (Starting Moves)</h2>
-<div id="startingmoves"><p class="InstructionsAfterHeader">Choose a race and gain the corresponding move:</p>
+
+<h2>起始動作</h2>
+<div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
 <div id="racialmoves"><div class="Move"><h3 class="MoveName">Halfling</h3>
 <p class="NoIndent">When you attack with a ranged weapon, deal +2 damage.</p></div>
 <div class="Move"><h3 class="MoveName">Human</h3>
 <p class="NoIndent">You are a professional. When you spout lore or discern realities about criminal activities, take +1.</p></div></div>
-<div id="classmoves"><p class="Instructions">You start with these moves:</p>
+
+<div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
 <div class="Move"><h3 class="BasicMoveName">陷阱專家 (Trap Expert)</h3>
 <p class="NoIndent">When you <strong>spend a moment to survey a dangerous area</strong>, roll+DEX. ✴On a 10+, hold 3. ✴On a 7–9, hold 1. Spend your hold as you walk through the area to ask these questions:</p>
 <ul><li>Is there a trap here and if so, what activates it?</li>
@@ -160,25 +162,30 @@
 <li>Goldenroot (applied): The target treats the next creature they see as a trusted ally, until proved otherwise</li>
 <li>Serpent’s Tears (touch): Anyone dealing damage to the target rolls twice and takes the better result.</li></ul></div></div></div>
 <hr/>
-<h2>陣營 (Alignment)</h2>
-<p class="InstructionsAfterHeader">Choose an alignment:</p>
-<div id="alignment"><div class="Move"><h3 class="MoveName">Chaotic</h3>
+
+<h2>陣營</h2>
+<p class="InstructionsAfterHeader">選擇一個陣營：</p>
+<div id="alignment"><div class="Move"><h3 class="MoveName">混亂</h3>
 <p class="NoIndent">Leap into danger without a plan.</p></div>
-<div class="Move"><h3 class="MoveName">Neutral</h3>
+<div class="Move"><h3 class="MoveName">中立</h3>
 <p class="NoIndent">Avoid detection or infiltrate a location.</p></div>
-<div class="Move"><h3 class="MoveName">Evil</h3>
+<div class="Move"><h3 class="MoveName">邪惡</h3>
 <p class="NoIndent">Shift danger or blame from yourself to someone else.</p></div></div>
 <hr/>
-<h2>裝備 (Gear)</h2>
-<div id="gear"><p class="NoIndent">Your load is 9+Str. You start with dungeon rations (5 uses, 1 weight), leather armor (1 armor, 1 weight), 3 uses of your chosen poison, and 10 coins. Choose your arms:</p>
-<ul><li class="Option">Dagger (hand, 1 weight) and short sword (close, 1 weight)</li>
-<li class="Option">Rapier (close, precise, 1 weight)</li></ul>
-<p class="NoIndent">Choose a ranged weapon:</p>
-<ul><li class="Option">3 throwing daggers (thrown, near, 0 weight)</li>
-<li class="Option">Ragged Bow (near, 2 weight) and bundle of arrows (3 ammo, 1 weight)</li></ul>
-<p class="NoIndent">Choose one:</p>
-<ul><li class="Option">Adventuring gear (1 weight)</li>
-<li class="Option">Healing potion (0 weight)</li></ul></div>
+
+<h2>裝備</h2>
+<div id="gear"><p class="NoIndent">
+	你的負載上限為 9+力量。<br/>
+	你起始擁有 地城口糧 (<tag>5 使用次數</tag> <tag>1 重量</tag>), 皮甲 (<tag>1 護甲</tag> <tag>1 重量</tag>), 你所選擇的毒藥 (<tag>3 使用次數</tag>), 和 10金幣。</p>
+選擇你的武器：
+<ul><li class="Option">匕首 (<span class="Tags">觸及, 1 重量</span>) 和 短劍 (<span class="Tags">近身, 1 重量</span>)</li>
+<li class="Option">刺劍 (<span class="Tags">近身, 靈巧, 1 重量</span>)</li></ul>
+選擇一項遠程武器：：
+<ul><li class="Option">3 飛刀 (<span class="Tags">投擲, 短程, 0 重量</span>)</li>
+<li class="Option">劣質弓 (<span class="Tags">短程, 2 重量</span>) 和 一綑箭矢 (<span class="Tags">3 彈藥, 1 重量</span>)</li></ul>
+選擇一項：
+<ul><li class="Option">探險工具組 (<span class="Tags">5 使用次數, 1 重量</span>)</li>
+<li class="Option">治療藥水 (<span class="Tags">0 重量</span>)</li></ul></div>
 <hr/>
 <h2>羈絆 (Bonds)</h2>
 <div id="bonds"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
@@ -188,7 +195,7 @@
 <p>_______________ and I have a con running.</p></div>
 <hr/>
 <h2>進階動作 (Advanced Moves)</h2>
-<div id="moves"><p class="InstructionsAfterHeader">When you gain a level from 2–5, choose from these moves.</p>
+<div id="moves"><p class="InstructionsAfterHeader">當你的等級升至2~5，從下列動作中選擇：</p>
 <div class="Move"><h3 class="MoveName">Cheap Shot</h3>
 <p class="NoIndent">When using a precise or hand weapon, your backstab deals an extra +1d6 damage.</p></div>
 <div class="Move"><h3 class="MoveName">Cautious</h3>
@@ -207,7 +214,8 @@
 <p class="NoIndent">When you’re outnumbered, you have +1 armor.</p></div>
 <div class="Move"><h3 class="MoveName">Connections</h3>
 <p class="NoIndent">When you put out word to the criminal underbelly about something you want or need, roll+CHA. ✴On a 10+, someone has it, just for you. ✴On a 7–9, you’ll have to settle for something close or it comes with strings attached, your call.</p></div>
-<p class="Instructions">When you gain a level from 6–10, choose from these moves or the level 2–5 moves.</p>
+
+<p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
 <div class="Move"><h3 class="MoveName">Dirty Fighter</h3>
 <p class="Requirement">Replaces: Cheap Shot</p>
 <p class="NoIndent">When using a precise or hand weapon, your backstab deals an extra +1d8 damage and all other attacks deal +1d4 damage.</p></div>
